[package]
name = "modem-core"
version = "0.1.0"
edition = "2021"
description = "Digital modulation: ASK, FSK, PSK, QAM with constellation diagrams and BER analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/modem-core"
keywords = ["modulation", "PSK", "QAM", "BER", "dsp"]
categories = ["science", "mathematics", "algorithms"]
authors = ["SuperInstance"]
readme = "README.md"
